fix: align select suffixes in a column with icons

--- a/src/components/select/select.scss
+++ b/src/components/select/select.scss
@@ -110,7 +110,7 @@
   }
 
   &__suffix {
-    padding-right: 12px;
+    padding-right: 6px;
   }
 
   &__icon {
